--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,30 @@
 #beertap-pic {
-    background-attachment: fixed;
-    background-image: url("../images/beer-taps.jpg");
-    background-position: bottom;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 100vh;
-    width: 100vw;
-    justify-content: center;
+  background-attachment: fixed;
+  background-image: url("../images/beer-taps.jpg");
+  background-position: bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100vw;
+  justify-content: center;
 }
 
-#map {
-    height: 300px;
+
+
+#mapManchester {
+  height: 250px;
+  border: 1px solid red;
+  padding: 10px;
+  width: 80%;
+  text-align: center;
+  position: relative;
+ 
 }
 
+#mapLondon {
+  height: 250px;
+  border: 1px solid yellow;
+  padding: 10px;
+  width: 80%;
+  text-align: center;
+}
