--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,6 @@
   justify-content: center;
 }
 
-
-
 #mapManchester {
   height: 250px;
   border: 1px solid red;
@@ -27,4 +25,25 @@
   padding: 10px;
   width: 80%;
   text-align: center;
+}
+
+#mapTest {
+  height: 250px;
+  border: 1px solid red;
+  padding: 10px;
+  width: 80%;
+  text-align: center;
+  position: relative;
+ 
+}
+
+#offer-pic {
+    background-attachment: fixed;
+  background-image: url("../images/hops.jpeg");
+  background-position: bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100px;
+  width: auto;
+  justify-content: center;
 }
