--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 #beertap-pic {
   background-attachment: fixed;
   background-image: url("../images/beer-taps.jpg");
@@ -9,36 +14,8 @@
   justify-content: center;
 }
 
-#mapManchester {
-  height: 250px;
-  border: 1px solid red;
-  padding: 10px;
-  width: 80%;
-  text-align: center;
-  position: relative;
- 
-}
-
-#mapLondon {
-  height: 250px;
-  border: 1px solid yellow;
-  padding: 10px;
-  width: 80%;
-  text-align: center;
-}
-
-#mapTest {
-  height: 250px;
-  border: 1px solid red;
-  padding: 10px;
-  width: 80%;
-  text-align: center;
-  position: relative;
- 
-}
-
 #offer-pic {
-    background-attachment: fixed;
+  background-attachment: fixed;
   background-image: url("../images/hops.jpeg");
   background-position: bottom;
   background-size: cover;
@@ -46,4 +23,77 @@
   height: 100px;
   width: auto;
   justify-content: center;
+}
+
+.card-manchester {
+  background-attachment: fixed;
+  background-image: url("../images/manchester.jpeg");
+  background-position: bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100px;
+  width: auto;
+  justify-content: center;
+}
+
+/* ----------------------------------------Maps */
+
+#mapManchester {
+  height: 250px;
+  border: 1px solid red;
+  padding: 10px;
+  width: 100%;
+  text-align: center;
+  position: relative;
+}
+
+#mapLondon {
+  height: 250px;
+  border: 1px solid yellow;
+  padding: 10px;
+  width: 100%;
+  text-align: center;
+}
+
+#mapTest {
+  height: 250px;
+  border: 1px solid red;
+  padding: 10px;
+  width: 100%;
+  text-align: center;
+  position: relative;
+}
+/* ----------------------------------------Cards */
+
+.card-text {
+  text-align: center;
+  font-size: 24px;
+  font-weight: 4;
+  text-decoration: none;
+}
+
+.card-img-top {
+  size: fill;
+}
+
+.card-london {
+  box-shadow: 20px 20px 50px 10px pink;
+}
+
+/* ----------------------------------------Headings */
+
+.cities-heading {
+  text-align: center;
+  font-size: 35px;
+}
+
+.cities-container {
+  padding-left: 60px;
+  padding-bottom: 30px;
+}
+
+@media (max-width: 1024px) {
+    .cities-container {
+  padding-right: 200px;
+}
 }
