--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,25 @@
+@import url('https://fonts.googleapis.com/css?family=Bangers:100,300,400,700&display=swap');
+
+
 body {
-  margin: 0;
-  padding: 0;
+    font-family: 'Bangers', sans-serif;   
+    margin: 0;
+    padding: 0;
 }
 
+
 #beertap-pic {
-  background-attachment: fixed;
-  background-image: url("../images/beer-taps.jpg");
-  background-position: bottom;
-  background-size: cover;
+ display: block;
+  height: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: url("../images/beer-and-hops.webp");
+  background-position: center;
+  object-fit: cover;
   background-repeat: no-repeat;
-  height: 100vh;
   width: 100vw;
   justify-content: center;
+ 
 }
 
 #offer-pic {
@@ -25,18 +33,22 @@ body {
   justify-content: center;
 }
 
-.card-manchester {
-  background-attachment: fixed;
-  background-image: url("../images/manchester.jpeg");
-  background-position: bottom;
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 100px;
-  width: auto;
-  justify-content: center;
+/* ----------------------------------------Navbar */
+
+.nav-hop {
+    height: 80px;
+    background-color: #0E9594;
 }
 
-/* ----------------------------------------Maps */
+li a {
+    font-size: 20px;
+    text-decoration: none;
+    color: #127475;
+}
+
+li a:hover {
+   color: black;
+}
 
 #mapManchester {
   height: 250px;
@@ -64,25 +76,29 @@ body {
   position: relative;
 }
 /* ----------------------------------------Cards */
+.cities-container {
+  padding-bottom: 50px;
+}
 
 .card-text {
   text-align: center;
   font-size: 24px;
-  font-weight: 4;
   text-decoration: none;
 }
 
-.card-img-top {
-  size: fill;
-}
-
 .card-london {
-  box-shadow: 20px 20px 50px 10px pink;
+  box-shadow: 10px 10px 20px 10px yellow;
 }
 
-.card {
-margin-left: 15px;
+.card-manchester {
+  box-shadow: 10px 10px 20px 10px red;
 }
+
+.card-liverpool {
+  box-shadow: 10px 10px 20px 10px blue;
+}
+
+
 
 /* ----------------------------------------Headings */
 
@@ -91,14 +107,14 @@ margin-left: 15px;
   font-size: 35px;
 }
 
-
-.cities-container {
-    justify-content: space-around;
+.offer-heading {
+  text-align: center;
 }
- .col-cards {
-     justify-content: center;
- }
 
+.about-heading {
+    text-align: center;
+    font-size: 35px;
+}
 /* ----------------------------------------waypoint */
 #right-panel {
   font-family: "Roboto", "sans-serif";
@@ -118,12 +134,8 @@ margin-left: 15px;
 #right-panel i {
   font-size: 12px;
 }
-html,
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
+
+
 #mapWaypoint {
   height: 250px;
   border: 1px solid red;
@@ -133,8 +145,6 @@ body {
   position: relative;
   float: left;
   box-shadow: 20px 20px 50px 10px pink;
- 
-  
 }
 #right-panel {
   margin: 20px;
@@ -151,4 +161,12 @@ body {
   padding: 10px;
   overflow: scroll;
   height: 174px;
+}
+
+/* ----------------------------------------Modal */
+
+
+.modal-header {
+    font-size: 50px;
+    color: red;
 }
