--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,7 +138,7 @@ li a:hover {
 
 .breweries-near-container {
   border: 1px solid black;
-  background-color: 	#ff3300;
+  background-color: #ff3300;
   padding: 5px;
   text-align: center;
 }
@@ -154,14 +154,15 @@ li a:hover {
 /* ----------------------------------------Breweries near you/map page */
 
 #panel {
-  height: 100%;
-  width: 30%;
-  background-color: white;
-  position: fixed;
-  z-index: 1;
-  overflow-x: hidden;
-  transition: all 0.2s ease-out;
-}
+      height: 100%;
+      width: null;
+      background-color: white;
+      position: fixed;
+      z-index: 1;
+      overflow-x: hidden;
+      transition: all .2s ease-out;
+    }
+
 
 .open {
   width: 250px;
@@ -200,7 +201,7 @@ a {
 #breweries-map {
   height: 500px;
   border: 1px solid black;
-  width: 70%;
+  width: 100%;
 }
 
 #mapManchester {
@@ -357,15 +358,26 @@ a {
 }
 
 #start {
-    background-color: #FF82E2
+    background-color: #48A4D6;
+    color: white;
+    border: 1px solid black;
 }
 
-#end {
-    background-color: #FF82E2
+ #end {
+    background-color: #48A4D6;
+    color: white;
+    border: 1px solid black;
+}
+
+#waypoints {
+        background-color: #48A4D6;
+        color: white;
 }
 
 input#submit {
-    background-color: #FED715
+    background-color: #EB190D;
+    color: white;
+
 }
 
 /* ----------------------------------------Modal */
@@ -485,18 +497,7 @@ a .newsletter {
     height: 15rem;
 }
 
-#panel {
-  height: 40vh;
-  width: 50%;
-  background-color: white;
-  position: fixed;
-  z-index: 1;
-  overflow-x: hidden;
-  transition: all 0.2s ease-out;
-}
 
-#breweries-map {
-  height: 300px;
-  border: 1px solid black;
-  width: 100%;
-}
+
+@media (max-width: 667px) {
+
