--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Bangers:100,300,400,700&display=swap");
 
+@font-face {
+    font-family: " AVENGER";
+    src: url("assets/fonts/AVENGER.otf") format("otf"), url("assets/fonts/AVENGER.ttf") format("ttf")
+}
+
 body {
-  font-family: "Bangers", sans-serif;
+  font-family: "AVENGER", sans-serif;
   margin: 0;
   padding: 0;
   font-size: 20px;
@@ -276,6 +281,7 @@ a {
 .cities-heading {
   text-align: center;
   font-size: 65px;
+  font-family: "AVENGER"
 }
 
 .breweries-near-heading {
