--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Bangers:100,300,400,700&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 
 
 body {
@@ -9,9 +9,15 @@ body {
   font-size: 20px;
 }
 
-#beertap-pic {
+.about-container, .breweries-near-container, .barhop-container {
+    font-family: 'Playfair Display', serif;
+}
+
+
+#People-drinking {
+
+  background: url("../images/people-drinking.jpg");
   background-attachment: fixed;
-  background-image: url("../images/people-drinking.jpg");
   background-position: bottom;
   background-size: cover;
   background-repeat: no-repeat;
@@ -20,6 +26,9 @@ body {
   justify-content: center;
   position: relative;
   border: 3px solid red;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
 }
 
 #beer-bottles {
@@ -31,6 +40,9 @@ body {
   height: 40vh;
   width: auto;
   justify-content: center;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
 }
 
 #hop {
@@ -68,73 +80,6 @@ li a:hover {
  color: #183362 !important;
 }
 
-/* ------------------Mobile */
-@media (max-width: 767px) {
-  .card-breweries-near {
-    width: 15rem;
-  }
-
-#beertap-pic {
-    display: none;
-}
-
-#beer-bottles {
-    display: none;
-}
-
-  a.nav-link {
-    text-align: center;
-  }
-
-  .logo {
-    text-align: center;
-    size: 5rem;
-  }
-
-  #beer-pic {
-    display: none;
-  }
-
-  .overlay-image {
-    display: none;
-  }
-
-  #directions-panel {
-    width: 100% !important;
-    margin-bottom: 5rem !important;
-  }
-
-  #right-panel select,
-  #right-panel input {
-    font-size: 10px;
-  }
-
-  #right-panel {
-    width: 100% !important;
-    padding-right: 3rem;
-  }
-
-  #mapManchester {
-    height: 340px;
-    border: 1px solid red;
-    padding: 10px;
-    width: 100% !important;
-    text-align: center;
-    position: relative;
-    float: left;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    #beertap-pic {
-    display: none;
-}
-
-#beer-bottles {
-    display: none;
-}
-}
-
 /* ----------------------------------------Landing */
 
 .landing-container {
@@ -145,7 +90,7 @@ li a:hover {
 
 .about-container {
   border: 1px solid black;
-  background-color: red;
+  background-color: #F93822FF;
   padding: 5px;
   text-align: center;
 }
@@ -198,7 +143,6 @@ li a:hover {
 
 .place,
 p {
-  font-family: "open sans", arial, sans-serif;
   padding-left: 18px;
   padding-right: 18px;
 }
@@ -289,11 +233,20 @@ a {
 
 /* ----------------------------------------Headings */
 
-.cities-heading {
-  text-align: center;
-  font-size: 65px;
- 
+.landing-heading {
+    margin-top: 8rem;
+   font-size: 9rem;
+    color: black;
+  -webkit-text-fill-color: white; /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
 }
+
+.cities-heading, .barhop-heading {
+  text-align: center;
+  font-size: 65px; 
+}
+
 
 .breweries-near-heading {
   text-align: center;
@@ -305,20 +258,11 @@ a {
   padding: 10px;
 }
 
-.barhop-heading {
-  color: black;
-  font-size: 58px;
-  letter-spacing: 5px;
-  margin-left: 21px;
-  text-align: center;
-  padding-top: 150px;
-}
-
 .jumbotron-cities {
   background-color: #FF82E2;
 }
 
-.jumbotron-premium {
+.jumbotron-barhop {
     background-color: #FED715;
 }
 
@@ -481,7 +425,76 @@ a .newsletter {
   padding-bottom: 25px;
 }
 
-/* ----------------------------------------Media Query */
+
+/* ---------------------------------------What we offer cards */
+
+.card-title {
+   text-align: center;
+}
+
+.bar-hop-footer {
+    height: 15rem;
+}
+
+
+
+/* ---------------------------------------Media Queries */
+/* ------------------Mobile */
+@media (max-width: 767px) {
+  .card-breweries-near {
+    width: 15rem;
+  }
+
+#People-drinking{
+    display: none;
+}
+
+#beer-bottles {
+    display: none;
+}
+
+  a.nav-link {
+    text-align: center;
+  }
+
+  .logo {
+    text-align: center;
+    size: 5rem;
+  }
+
+  #beer-pic {
+    display: none;
+  }
+
+  .overlay-image {
+    display: none;
+  }
+
+  #directions-panel {
+    width: 100% !important;
+    margin-bottom: 5rem !important;
+  }
+
+  #right-panel select,
+  #right-panel input {
+    font-size: 10px;
+  }
+
+  #right-panel {
+    width: 100% !important;
+    padding-right: 3rem;
+  }
+
+  #mapManchester {
+    height: 340px;
+    border: 1px solid red;
+    padding: 10px;
+    width: 100% !important;
+    text-align: center;
+    position: relative;
+    float: left;
+  }
+}
 
 @media only screen and (max-width: 800px) {
   .card-breweries-near {
@@ -507,18 +520,12 @@ a .newsletter {
   }
 }
 
-/* ---------------------------------------Waht we offer cards */
-
-.card-title {
-   text-align: center;
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    #People-drinking {
+    display: none;
 }
 
-.bar-hop-footer {
-    height: 15rem;
+#beer-bottles {
+    display: none;
 }
-
-
-
-
-@media (max-width: 667px) {
-
+}
